# solana-stablecoin-standard

./: .gitignore  Anchor.toml  CLAUDE.md  Documenting.md  README.md  justfile
app/: package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/components/: BlacklistPanel.tsx  BurnHistory.tsx  Footer.tsx  FreezeHistory.tsx  Header.tsx  MintHistory.tsx  RoleManagement.tsx  SeizeHistory.tsx  TokenTable.tsx
app/lib/: api.ts  index.ts  useSolana.ts
audit/: 1st_audit.md
backend/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
backend/src/: integration_tests.rs  main.rs
backend/src/routes/: health.rs  mod.rs  webhook.rs
backend/src/services/: compliance.rs  events.rs  mint_burn.rs  mod.rs  rpc.rs  solana.rs  webhook.rs
cli/: Cargo.toml
cli/src/: config.rs  main.rs  rpc_client.rs  signer.rs  tui.rs
cli/src/commands/: audit_log.rs  blacklist.rs  burn.rs  compliance.rs  freeze.rs  holders.rs  init.rs  mint.rs  minters.rs  mod.rs  pause.rs  privacy.rs  seize.rs  status.rs  supply.rs  thaw.rs
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  OPERATIONS.md  SDK.md  SSS-1.md  SSS-2.md  SSS-3.md
programs/solana-stablecoin-standard/: Cargo.toml
programs/solana-stablecoin-standard/src/: error.rs  event.rs  lib.rs  state.rs
programs/solana-stablecoin-standard/tests/: mod.rs  tests.md
programs/sss-compliance-hook/: Cargo.toml
programs/sss-compliance-hook/src/: lib.rs  state.rs
sdk/: .env.example  idl.json  jest.config.json  jest.live.config.js  package-lock.json  package.json  tsconfig.json
sdk/__tests__/: devnet.test.ts  index.test.js  index.test.ts  live.test.ts
sdk/src/: index.ts  presets.ts  types.ts
tests/: Cargo.toml
tests/src/: lib.rs  test_initialize.rs  test_util.rs
