[package]
name = "sss-backend"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
axum = "0.7.9"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "2.0"
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
solana-client = "2.0"
solana-transaction-status = "2.0"
tokio-tungstenite = "0.21"
futures-util = "0.3"
base64 = "0.22"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }