[package]
name = "sss-token-cli"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
solana-sdk = "2.0"
solana-client = "2.0"
solana-program = "2.0"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
anyhow = "1.0"
serde_json = "1.0"
dirs = "5.0"
bincode = "1.3"
bs58 = "0.5"
borsh = "1.5"
sha2 = "0.10"
spl-token-2022 = "9.0"
spl-associated-token-account = "8.0"
ratatui = "0.28"
crossterm = "0.28"
gag = "1.0"

[[bin]]
name = "sss-token"
path = "src/main.rs"
