[package]
name = "solana-stablecoin-standard"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_stablecoin_standard"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token_2022", "associated_token", "metadata"] }

[dev-dependencies]
litesvm = "0.6.1"
solana-address = "1.0.0"
solana-hash = "2.2.1"
solana-instruction = "2.2.1"
solana-pubkey = "2.2.1"
sss-compliance-hook = { path = "../sss-compliance-hook", features = [
    "cpi",
] }
solana-keypair = "2.2.1"
solana-transaction = "2.2.1"
solana-signer = "2.2.1"
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }