[package]
name = "solana-stablecoin-standard"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_stablecoin_standard"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1" }

[dev-dependencies]
litesvm = "0.6.1"
solana-address = "1.0"
solana-hash = "2.2"
solana-instruction = "2.2"
solana-pubkey = "2.2"
solana-keypair = "2.2"
solana-transaction = "2.2"
solana-signer = "2.2"
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
sss-compliance-hook = { path = "../sss-compliance-hook", features = [
    "cpi",
] }
borsh = "0.10"