[package]
name = "sss-compliance-hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_compliance_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token_2022", "associated_token", "metadata"] }
spl-token-2022 = "6.0.0"
spl-transfer-hook-interface = "0.8.0"
spl-tlv-account-resolution = "0.8.0"
spl-discriminator = "0.3.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
